# TLE

./: .dockerignore  .editorconfig  .env.example  .gitignore  .style.yapf  ARCHITECTURE.md  AUDIT.md  Aptfile  Docker.md  Dockerfile  LICENSE  Pipfile  ProcFile  Procfile  README  README.md  ROADMAP.md  TESTING_PLAN.md  docker-compose.yaml  docker-compose.yml  environment  environment.template  faq.md  heroku-docker.md  heroku.yml  heroku_deploy.md  heroku_run.sh  movingaverage.txt  pyproject.toml  requirements.txt  ruff.toml  run-pip.sh  run.sh
.github/: lint.yaml
.github/workflows/: build.yaml  build.yml  docker-image.yml  lint.yaml  test.yaml  yapf.yaml
db_utils/: handle_conn.py
extra/: fonts.conf  scrape_cf_contest_writers.py
handle_conn/: handle_conn.py
tests/: conftest.py
tests/component/: test_api_parsing.py  test_cache_db.py  test_cache_system.py  test_user_db.py
tests/fixtures/cf_api_responses/: contest_list.json  contest_standings.json  rating_changes.json  user_info.json  user_status.json
tests/integration/: test_codeforces_cog.py
tests/unit/: test_codeforces_api.py  test_codeforces_common.py  test_duel_view.py  test_events.py  test_handledict.py  test_oauth.py  test_paginator.py  test_rating_calculator.py  test_table.py  test_tasks.py
tle/: __main__.py  constants.py  font_downloader.py
tle/cogs/: alerts.py  cache_control.py  codeforces.py  contests.py  cses.py  duel.py  future_contests.py  git.py  graphs.py  handles.py  hashcode.py  lockout.py  logging.py  meta.py  roles.py  starboard.py  training.py
tle/cogs/deactivated/: cses.py
tle/cogs/util/: codeforces_api.py  cses_scraper.py
tle/data/db/: cache.db  user.db
tle/util/: ansi.py  cache_system.py  cache_system2.py  clist_api.py  clist_common.py  codeforces_api.py  codeforces_common.py  cses_scraper.py  discord_common.py  elo.py  event_system.py  events.py  filters.py  font_downloader.py  graph_common.py  handle_conn.py  handledict.py  oauth.py  paginator.py  rating.py  scaper.py  table.py  tasks.py  tatsumaki_api.py
tle/util/cache/: __init__.py  _common.py  cache_system.py  contest.py  problem.py  problemset.py  ranklist.py  rating_changes.py
tle/util/db/: __init__.py  cache_db_conn.py  user_db_conn.py
tle/util/ranklist/: __init__.py  ranklist.py  rating_calculator.py
